# daft-scraper

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg
.circleci/: config.yml
daft_scraper/: __init__.py  listing.py
daft_scraper/cli/: __init__.py
daft_scraper/search/: __init__.py  options.py  options_location.py
tests/: test_daft-scraper.py  test_listing.py  test_search.py
tests/fixtures/: ad_page_info.html  listing.json  sample_page.html
