[tool.poetry]
name = "daft-scraper"
version = "1.4.0"
description = "A webscraper for Daft.ie"
authors = ["Evan Smith <me@iamevan.me>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
daft = 'daft_scraper.cli:main'

[tool.poetry.dependencies]
python = "^3.7"
beautifulsoup4 = "^4.9.3"
requests = "^2.25.0"
typer = "^0.3.2"
marshmallow = "^3.9.1"
tabulate = "^0.8.7"
urllib3 = "^1.26.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
pylint = "^2.6.0"
pytest = "*"
pytest-cov = "*"
mock = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
